[package]
name = "fmod"
version = "0.1.0"
authors = ["Dan <igaryhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
fmod-sys = { path = "fmod-sys" }
anyhow = "1.0"
thiserror = "1.0"

[workspace]
members = ["fmod-sys"]
